	PR gas/2101 	* config/tc-mmix.c (mmix_handle_mmixal): Don't treat #[0-9][FB] as 	a local-label reference.